# ops-sparse

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  build.sh  install_deps.sh  requirements.txt  test.md
agent/: AGENT.md  QUICKSTART.md  README.md  init.sh
agent/agents/: architect.md  developer.md  reviewer.md  tester.md  writer.md
agent/skills/: cannbot_references.json
agent/skills/agent-model-select/: SKILL.md
agent/skills/asc-devkit-reference/: SKILL.md
agent/skills/gitcode-pr-issue-guide/: SKILL.md
agent/skills/op-samples-reference/: SKILL.md
agent/skills/repo-build-guide/: SKILL.md
agent/skills/repo-coding-rules/: SKILL.md
agent/skills/repo-knowledge/: SKILL.md
agent/skills/repo-op-templates/: SKILL.md
agent/skills/repo-test-develop/: SKILL.md
agent/skills/sparse-ST-develop/: SKILL.md
agent/skills/sparse-ascendc-coding-rules/: SKILL.md
agent/skills/sparse-build-commands/: SKILL.md
agent/skills/sparse-lib-rules/: SKILL.md
agent/skills/sparse-log/: SKILL.md
agent/skills/sparse-new-op-workflow/: SKILL.md
agent/skills/sparse-new-op-workflow-maintain/: SKILL.md
agent/skills/sparse-op-templates/: SKILL.md
agent/skills/workflow-doc-templates/: SKILL.md
cmake/: makeself.cmake  package.cmake  test.cmake  version.cmake
docs/: QUICKSTART.md  build_packaging_test_design.md
docs/zh/: api_list.md
docs/zh/develop/: compile_and_run_example.md  readme_develop_guide.md
docs/zh/install/: dir_structure.md  quick_install.md
include/: cann_ops_sparse.h  cann_ops_sparseLt.h  cann_ops_sparse_common.h
scripts/package/: help.info  install.sh
scripts/util/: gen_version_info.sh
sparse/: CMakeLists.txt
sparse/common/: aclsparse_auxiliary.cpp  aclsparse_descr.cpp  aclsparse_descr_internal.h  aclsparse_host_utils.h  aclsparse_logger_manager.h
sparse/coosort/: README.md
sparse/coosort/arch35/: coosort_host.cpp  coosort_kernel.cpp  coosort_kernel.h  coosort_multi_core_kernel.h  coosort_tiling_data.h
sparse/csrgeam2/arch35/: csrgeam2_kernel.cpp
sparse/csrsort/: README.md
sparse/csrsort/arch35/: csrsort_host.cpp  csrsort_kernel.cpp  csrsort_kernel.h  csrsort_tiling_data.h  csrsort_tiling_utils.h
sparse/gpsv_interleaved_batch/: README.md
sparse/gpsv_interleaved_batch/arch35/: gpsv_interleaved_batch_host.cpp  gpsv_interleaved_batch_kernel.cpp  gpsv_interleaved_batch_kernel.h  gpsv_interleaved_batch_tiling_data.h
sparse/gtsv2/: README.md
sparse/gtsv2/arch35/: gtsv2_host.cpp  gtsv2_kernel.cpp  gtsv2_kernel.h  gtsv2_tiling_data.h
sparse/gtsv2_nopivot/: README.md
sparse/gtsv2_nopivot/arch35/: gtsv2_nopivot_host.cpp  gtsv2_nopivot_kernel.cpp  gtsv2_nopivot_kernel.h  gtsv2_nopivot_tiling_data.h
sparse/gtsv2_strided_batch/: README.md
sparse/gtsv2_strided_batch/arch35/: gtsv2_strided_batch.h  gtsv2_strided_batch_host.cpp  gtsv2_strided_batch_kernel.cpp  gtsv2_strided_batch_kernel.h  gtsv2_strided_batch_tiling_data.h
sparse/gtsv_interleaved_batch/: README.md
sparse/gtsv_interleaved_batch/arch35/: gtsv_interleaved_batch_host.cpp  gtsv_interleaved_batch_kernel.cpp  gtsv_interleaved_batch_tiling_data.h
sparse/spmm/: README.md
sparse/spmm/arch35/: spmm.h  spmm_csr_mat.cpp  spmm_csr_mat.h  spmm_host.cpp
sparse/spmv/arch22/: spmv.h
sparse/spmv_op/: README.md
sparse/spmv_op/arch35/: spmv_op.h  spmv_op_host.cpp  spmv_op_kernel.cpp  spmv_op_kernel.h  spmv_op_tiling_data.h
sparseLt/: CMakeLists.txt
sparseLt/common/: aclsparselt_auxiliary.cpp  aclsparselt_error.cpp  aclsparselt_handle_internal.h
src/: CMakeLists.txt
src/common/: aclsparse_auxiliary.cpp  aclsparse_descr.cpp  aclsparse_descr_internal.h  aclsparse_handle_internal.h  aclsparse_host_utils.h  aclsparse_logger_manager.cpp  aclsparse_logger_manager.h  aclsparse_matdescr.cpp
src/csrgeam2/: README.md
src/csrgeam2/arch35/: csrgeam2.h  csrgeam2_host.cpp  (+2 more)
src/nnz/: README.md
src/spmm/: spmm_host.cpp  spmm_kernel.cpp
src/spmv/: README.md  sparse_common.h  spmv.h  spmv_csr_mat.cpp  spmv_csr_mat.h  spmv_host.cpp  spmv_host.h  spmv_kernel.cpp
test/: CMakeLists.txt
test/coosort/: CMakeLists.txt
test/coosort/arch35/: coosort_golden.h  coosort_test.cpp
test/csrgeam2/: CMakeLists.txt  csrgeam2_golden.h  csrgeam2_param.h
test/csrgeam2/arch35/: csrgeam2_npu_wrapper.h  csrgeam2_test.cpp  csrgeam2_test.csv
test/csrsort/: CMakeLists.txt
test/csrsort/arch35/: csrsort_golden.h  csrsort_test.cpp
test/frame/: csv_loader.h  descriptor_manager.h  fill.h  sparse_test.h  test_common.h  test_main.cpp  types.h  verify.h
test/gpsv_interleaved_batch/: CMakeLists.txt  gpsv_interleaved_batch_golden.h  gpsv_interleaved_batch_param.h
test/gpsv_interleaved_batch/arch35/: gpsv_interleaved_batch_npu_wrapper.h  gpsv_interleaved_batch_test.cpp  gpsv_interleaved_batch_test.csv
test/gtsv2/: CMakeLists.txt  gtsv2_golden.h  gtsv2_param.h
test/gtsv2/arch35/: gtsv2_npu_wrapper.h  gtsv2_test.cpp  gtsv2_test.csv
test/gtsv2_nopivot/: CMakeLists.txt  gtsv2_nopivot_golden.h  gtsv2_nopivot_param.h
test/gtsv2_nopivot/arch35/: gtsv2_nopivot_npu_wrapper.h  gtsv2_nopivot_test.cpp  gtsv2_nopivot_test.csv
test/gtsv2_strided_batch/: CMakeLists.txt  gtsv2_strided_batch_golden.h  gtsv2_strided_batch_param.h
test/gtsv2_strided_batch/arch35/: gtsv2_strided_batch_npu_wrapper.h  gtsv2_strided_batch_test.cpp  gtsv2_strided_batch_test.csv
test/gtsv_interleaved_batch/: CMakeLists.txt  gtsv_interleaved_batch_golden.h  gtsv_interleaved_batch_param.h
test/gtsv_interleaved_batch/arch35/: gtsv_interleaved_batch_npu_wrapper.h  gtsv_interleaved_batch_test.cpp  gtsv_interleaved_batch_test.csv
test/nnz/: CMakeLists.txt
test/nnz/snnz/: snnz_golden.h  snnz_param.h
test/nnz/snnz/arch35/: snnz_npu_wrapper.h  snnz_test.cpp  snnz_test.csv
test/spmm/: CMakeLists.txt  README.md  spmm_test.cpp
test/spmm/arch35/: spmm_test.cpp
test/spmv/: CMakeLists.txt  README.md  spmv_test.cpp
test/spmv/arch22/: spmv_test.cpp
test/spmv_op/: CMakeLists.txt  spmv_op_golden.h  spmv_op_param.h
test/spmv_op/arch35/: spmv_op_npu_wrapper.h  spmv_op_test.cpp  spmv_op_test.csv
(+121 files in other folders)
